refactor(ble): 重构BLE主机任务和HID事件处理
将BLE主机任务从ble_gap模块移动到app_main模块
在HID事件处理中添加新的按键'r'支持
新增hid_usage.c文件并更新CMakeLists.txt
注释掉不再使用的ble_hid_device_host_task函数

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,8 @@ set(srcs
     "ble/ble_gap.c"
     "hid/hid_report_map.c"
     "ble/hid_param.c"       # 修正路径：从 hid/hid_param.c 改为 ble/hid_param.c
-    "hid/hid_event.c"       # 新增
+    "hid/hid_event.c"
+    "hid/hid_usage.c"       # 新增
 )
 
 idf_component_register(SRCS ${srcs}
