feat(hid): 添加UART命令解析功能并重构HID事件处理
重构HID事件处理模块，移除旧的BLE HID任务启动函数，改为通过UART接收命令。新增UART任务和命令解析功能，支持多种HID操作命令。同时优化GATT服务中的命令处理逻辑，统一使用新的命令解析函数。

- 添加UART驱动初始化代码
- 实现UART任务用于接收和处理命令
- 新增parse_and_execute_command函数统一处理所有HID命令
- 重构GATT服务中的命令处理逻辑
- 更新CMakeLists添加driver依赖

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,5 +9,5 @@ set(srcs
 )
 
 idf_component_register(SRCS ${srcs}
-                    PRIV_REQUIRES bt esp_hid nvs_flash  
+                    PRIV_REQUIRES bt esp_hid nvs_flash driver
                     INCLUDE_DIRS "." "ble" "hid")
